# diffvibe

./: AGENTS.md  CLAUDE.md  LICENSE  README.md  justfile  package.json  pnpm-lock.yaml
.claude/: settings.local.json
.github/workflows/: release.yml
src/: AGENTS.md  app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: index.ts
src/routes/: +layout.svelte  +page.svelte
tasks/: milestone-1-basic-file-diff.md  milestone-1a-backend-core.md  milestone-1b-diff-view.md  milestone-1c-sync-scroll.md  milestone-1d-navigation.md  milestone-1e-file-picker.md  milestone-1f-drag-drop.md  milestone-1g-recent-files.md  milestone-2-file-editing.md  milestone-3-three-way-merge.md  milestone-4-directory-comparison.md  milestone-5-syntax-highlighting.md  todo.md  tree-navigation-rewrite-plan.md
tasks/milestone-0/: README.md
tasks/milestone-1/: 1b-diff-view.md  1c-sync-scroll.md  1f-drag-drop.md  1g-recent-files.md  README.md
tasks/milestone-2/: 2a-backend-write.md  2b-editable-panes.md  2c-copy-hunks.md  2d-save-flow.md  2e-undo-redo.md  README.md
tasks/milestone-3/: 3a-backend-algorithm.md  3b-three-pane-layout.md  3c-conflict-resolution.md  3d-git-integration.md  README.md
tasks/milestone-4/: 4a-backend-scanning.md  4b-tree-view-ui.md  4c-diff-integration.md  4d-directory-actions.md  README.md
tasks/milestone-5/: 5a-syntax-highlighting.md  5b-themes.md  5c-editor-features.md  5d-editor-integration.md  (+1 more)
tests/: base.txt  example_new.py  example_old.py  left.txt  local.txt  remote.txt  right.txt
(+27 files in other folders)
