[package]
name = "diffvibe"
version = "0.2.0"
description = "A cross-platform visual diff and merge tool inspired by Meld"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "diffvibe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Diff algorithm
similar = { version = "2", features = ["inline"] }
tauri-plugin-store = "2.4.2"

# CLI arg parsing
clap = { version = "4", features = ["derive"] }

# Fast hashing for directory comparison
xxhash-rust = { version = "0.8", features = ["xxh3"] }

# File system operations
fs_extra = "1.3"

# Regex for ignore pattern matching
regex = "1.10"

# Parallel processing
rayon = "1.8"

# Async runtime
tokio = { version = "1", features = ["rt", "sync"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
image = "0.25"
base64 = "0.22"

# Optimize deps in dev builds (image crate is 100x slower unoptimized)
[profile.dev.package."*"]
opt-level = 3
